[tool.poetry]
name = "perceval-coveralls"
version = "0.1.0"
description = "Perceval backend for Coveralls"
authors = ["Groninger Bugbusters"]
license = "GPL-3.0+"

readme = "README.md"

homepage = "https://chaoss.github.io/grimoirelab/"
repository = "https://github.com/Groninger-Bugbusters/grimoirelab-perceval-coveralls"

keywords = [
	"development",
	"grimoirelab"
]

packages = [
	{ include = "perceval" },
	{ include = "tests", format = "sdist" },
]

include = [
	{ path = "AUTHORS", format = "sdist" },
	{ path = "NEWS", format = "sdist" },
	{ path = "README.md", format = "sdist" },
]

classifiers = [
    "Development Status :: 1 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development",
    "Licence :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Groninger-Bugbusters/grimoirelab-perceval-coveralls/issues"

[tool.poetry.dependencies]
python = "^3.6.1"
requests = "^2.7.0"
grimoirelab-toolkit = "^0.2"
perceval = "^0.17.4"

[tool.poetry.dev-dependencies]
httpretty = "1.0.2"
grimoirelab-toolkit = {git = "https://github.com/chaoss/grimoirelab-toolkit.git", rev = "master"}
perceval = {git = "https://github.com/chaoss/grimoirelab-perceval.git", rev = "master"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
